--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testcafe-reporter-nunit3",
-  "version": "1.0.3",
+  "version": "1.0.3-p1",
   "description": "nunit3 TestCafe reporter plugin.",
   "repository": "https://github.com/NickLargen/testcafe-reporter-nunit3",
   "author": {
